BuildProgram: CPPFLAGS and LDFLAGS passed to libtool after own options
Since the first implementation of BuildProgram reading CPPFLAGS and LDFLAGS
(in commit `1d4043f333ef'), they were being passed onto libtool with higher
precedence than BuildPrograms own options. This could cause problems during
`make check' when an older version of Gnuastro exists, and the old
installation's `--includepath' is in CPPFLAGS (as it should be!).

With this commit, the values given to CPPFLAGS and LDFLAGS are passed to
libtool after the values given to BuildProgram's `--includedir' and
`--linkdir'. In this way, if they are indeed unique, they will be used, but
they won't cause unnecessary conflicts like the scenario above.

This bug was reported by Takashi Ichikawa.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -17943,8 +17943,11 @@ You may also use Gnuastro's @ref{Configuration files} to specify other libraries
 
 The C compiler can be chosen with the @option{--cc} option, or environment variables, please see the description of @option{--cc} for more.
 The two common @code{LDFLAGS} and @code{CPPFLAGS} environment variables are also checked and used in the build by default.
+Note that they are placed after the values to the corresponding options @option{--includedir} and @option{--linkdir}.
+Therefore BuildProgram's own options take precedence.
 Using environment variables can be disabled with the @option{--noenv} option.
-Just note that BuildProgram also keeps the important flags in these environment variables in its configuration file, so in many cases, when you needed them to build Gnuastro, you won't need them in BuildProgram.
+Just note that BuildProgram also keeps the important flags in these environment variables in its configuration file.
+Therefore, in many cases, even though you may needed them to build Gnuastro, you won't need them in BuildProgram.
 
 The first argument is considered to be the C source file that must be compiled and linked.
 Any other arguments (non-option tokens on the command-line) will be passed onto the program when BuildProgram wants to run it.
