Books: Acknowledgments section updated with new people in THANKS
To prepare for release 0.11, the newly added people since version 0.10 in
the THANKS file are now also thanked in the book's acknowledgments section.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -1393,6 +1393,7 @@ Zahra Bagheri,
 Karl Berry,
 Leindert Boogaard,
 Nicolas Bouch@'e,
+Stefan Br@"uns,
 Fernando Buitrago,
 Adrian Bunk,
 Rosa Calvi,
@@ -1400,6 +1401,7 @@ Nushkia Chamba,
 Benjamin Clement,
 Nima Dehdilani,
 Antonio Diaz Diaz,
+Alexey Dokuchaev,
 Pierre-Alain Duc,
 Elham Eftekhari,
 Gaspar Galaz,
@@ -1419,6 +1421,7 @@ Johan Knapen,
 Geoffry Krouchi,
 Floriane Leclercq,
 Alan Lefor,
+Sebasti@'an Luna Valero,
 Guillaume Mahler,
 Juan Molina Tobar,
 Francesco Montanari,
@@ -1426,7 +1429,9 @@ Dmitrii Oparin,
 Bertrand Pain,
 William Pence,
 Mamta Pommier,
+Marcel Popescu,
 Bob Proulx,
+Joseph Putko,
 Teymoor Saifollahi,
 Elham Saremi,
 Yahya Sefidbakht,
