--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 Copyright (C) 2015-2019 Free Software Foundation, Inc.
 See the end of the file for license conditions.
 
-* Noteworthy changes in release X.X (library X.X.X) (XXXX-XX-XX) [stable]
+* Noteworthy changes in release 0.11 (library 9.0.0) (2019-11-25) [stable]
 
 ** New features
 
