MakeCatalog: correctly copying unit string by allocation
When the input dataset had a `UNIT' keyword, brightness related columns
like `--brightness' print that unit in their column metadata. Until now,
only a reference to this string was passed to the column, so when the
actual dataset was freed, there would be a double-free crash.

With this commit, when we need such columns, we actually allocate their
necessary space and then actually copy the string's memory, so there will
be no conflict with freeing the input dataset in the end.

This bug was found on a dataset provided by Joseph Putko.

This fixes bug #57300.

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,21 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 Copyright (C) 2015-2019 Free Software Foundation, Inc.
 See the end of the file for license conditions.
 
+* Noteworthy changes in release X.XX (library X.X.X) (YYYY-MM-DD) [stable]
+
+** New features
+
+** Removed features
+
+** Changed features
+
+** Bugs fixed
+  bug #57300: MakeCatalog memory crash when input dataset has units.
+
+
+
+
+
 * Noteworthy changes in release 0.11 (library 9.0.0) (2019-11-25) [stable]
 
 ** New features
